replace .load() with .incl files

--- a/c/index.html
+++ b/c/index.html
@@ -17,41 +17,9 @@
 			<h2>
 				C
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/c/camps/index.html">camps</a></li>
-						<li><a href="/c/carbon-monoxide/index.html">carbon monoxide</a></li>
-						<li><a href="/c/censorship/index.html">Censorship</a></li>
-						<li><a href="/c/censorship/index.html">Censorship</a></li>
-						<li><a href="/c/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li>
-						<li><a href="/c/chasan-shaul/index.html">Chasan, Shaul</a></li>
-						<li><a href="/c/chelmno/index.html">Che&#322;mno</a></li>
-						<li><a href="/c/chomka-wladyslaw/index.html">Chomka, W&#322;adys&#322;aw</a></li>
-						<li><a href="/c/christophersen-thies/index.html">Christophersen, Thies</a></li>
-						<li><a href="/c/chybinski-stanislaw/index.html">Chybi&#324;ski, Stanis&#322;aw</a></li>
-						<li><a href="/c/cliches-about-the-holocaust/index.html">Clich&eacute;s about the Holocaust</a></li>
-						<li><a href="/c/code-language/index.html">code language</a></li>
-						<li><a href="/c/cohen-leon/index.html">Cohen, Leon</a></li>
-						<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
-						<li><a href="/c/compensation/index.html">compensation</a></li>
-						<li><a href="/c/concentration-camps/index.html">concentration camps</a></li>
-						<li><a href="/c/construction-office/index.html">Construction Office</a></li>
-						<li><a href="/c/convergence-of-evidence/index.html">convergence of evidence</a></li>
-						<li><a href="/c/corpse-photos/index.html">corpse photos</a></li>
-						<li><a href="/c/corry-joe/index.html">Corry, Joe</a></li>
-						<li><a href="/c/cremation-propaganda/index.html">cremation propaganda</a></li>
-						<li><a href="/c/crematoria/index.html">crematoria</a></li>
-						<li><a href="/c/criminal-traces/index.html">criminal traces</a></li>
-						<li><a href="/y/yugoslavia/index.html">Croatia</a></li>
-						<li><a href="/c/crystal-night/index.html">Crystal Night</a></li>
-						<li><a href="/z/zyklon-b/index.html">cyanide gas</a></li>
-						<li><a href="/c/cykert-abraham/index.html">Cykert, Abraham</a></li>
-						<li><a href="/c/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
-						<li><a href="/c/czech-danuta/index.html">Czech, Danuta</a></li>
-						<li><a href="/c/czechia/index.html">Czechia</a></li>
-						<li><a href="/c/czechowicz-aron/index.html">Czechowicz, Aron</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "c.incl" -->
+<ul class="columns"><li><a href="/c/camps/index.html">camps</a></li><li><a href="/c/carbon-monoxide/index.html">carbon monoxide</a></li><li><a href="/c/censorship/index.html">Censorship</a></li><li><a href="/c/censorship/index.html">Censorship</a></li><li><a href="/c/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li><li><a href="/c/chasan-shaul/index.html">Chasan, Shaul</a></li><li><a href="/c/chelmno/index.html">Che&#322;mno</a></li><li><a href="/c/chomka-wladyslaw/index.html">Chomka, W&#322;adys&#322;aw</a></li><li><a href="/c/christophersen-thies/index.html">Christophersen, Thies</a></li><li><a href="/c/chybinski-stanislaw/index.html">Chybi&#324;ski, Stanis&#322;aw</a></li><li><a href="/c/cliches-about-the-holocaust/index.html">Clich&eacute;s about the Holocaust</a></li><li><a href="/c/code-language/index.html">code language</a></li><li><a href="/c/cohen-leon/index.html">Cohen, Leon</a></li><li><a href="/c/commissars-order/index.html">Commissars Order</a></li><li><a href="/c/compensation/index.html">compensation</a></li><li><a href="/c/concentration-camps/index.html">concentration camps</a></li><li><a href="/c/construction-office/index.html">Construction Office</a></li><li><a href="/c/convergence-of-evidence/index.html">convergence of evidence</a></li><li><a href="/c/corpse-photos/index.html">corpse photos</a></li><li><a href="/c/corry-joe/index.html">Corry, Joe</a></li><li><a href="/c/cremation-propaganda/index.html">cremation propaganda</a></li><li><a href="/c/crematoria/index.html">crematoria</a></li><li><a href="/c/criminal-traces/index.html">criminal traces</a></li><li><a href="/y/yugoslavia/index.html">Croatia</a></li><li><a href="/c/crystal-night/index.html">Crystal Night</a></li><li><a href="/z/zyklon-b/index.html">cyanide gas</a></li><li><a href="/c/cykert-abraham/index.html">Cykert, Abraham</a></li><li><a href="/c/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li><li><a href="/c/czech-danuta/index.html">Czech, Danuta</a></li><li><a href="/c/czechia/index.html">Czechia</a></li><li><a href="/c/czechowicz-aron/index.html">Czechowicz, Aron</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
