--- a/d/index.html
+++ b/d/index.html
@@ -17,38 +17,9 @@
 			<h2>
 				D
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/d/dachau/index.html">Dachau</a></li>
-						<li><a href="/d/dachau-museum/index.html">Dachau Museum</a></li>
-						<li><a href="/d/dachau-trials/index.html">Dachau Trials</a></li>
-						<li><a href="/d/daluege-kurt-2/index.html">Daluege, Kurt</a></li>
-						<li><a href="/d/damjanovic-momcilo/index.html">Damjanovi&#263;, Mom&#269;ilo</a></li>
-						<li><a href="/d/davydov-vladimir/index.html">Davydov, Vladimir</a></li>
-						<li><a href="/d/dawidowski-roman/index.html">Dawidowski, Roman</a></li>
-						<li><a href="/d/ddt/index.html">DDT</a></li>
-						<li><a href="/e/evacuations-from-german-camps/index.html">death marches</a></li>
-						<li><a href="/e/exaggerated-death-tolls/index.html">death tolls</a></li>
-						<li><a href="/w/wael-monique-de/index.html">Defonseca, Misha</a></li>
-						<li><a href="/d/degesch/index.html">DEGESCH</a></li>
-						<li><a href="/d/dejaco-walter/index.html">Dejaco, Walter</a></li>
-						<li><a href="/d/demjanjuk-john/index.html">Demjanjuk, John</a></li>
-						<li><a href="/d/demography-jewish/index.html">Demography, Jewish</a></li>
-						<li><a href="/d/denisow-piotr/index.html">Denisow, Piotr</a></li>
-						<li><a href="/d/denmark/index.html">Denmark</a></li>
-						<li><a href="/r/resettlement/index.html">deportation</a></li>
-						<li><a href="/d/dibowski-wilhelm/index.html">Dibowski, Wilhelm</a></li>
-						<li><a href="/d/diesel-exhaust/index.html">Diesel Exhaust</a></li>
-						<li><a href="/f/fumigation-gas-chamber/index.html">disinfestation chamber</a></li>
-						<li><a href="/d/dlugoborski-waclaw/index.html">D&#322;ugoborski, W&aacute;c&#322;aw</a></li>
-						<li><a href="/d/doessekker-bruno/index.html">Doessekker, Bruno</a></li>
-						<li><a href="/d/doliner-iosif/index.html">Doliner, Iosif</a></li>
-						<li><a href="/g/gastight-doors/index.html">doors, gastight</a></li>
-						<li><a href="/d/dragon-abraham/index.html">Dragon, Abraham</a></li>
-						<li><a href="/d/dragon-szlama/index.html">Dragon, Szlama</a></li>
-						<li><a href="/d/dugin-itzhak/index.html">Dugin, Itzhak</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "d.incl" -->
+<ul class="columns"><li><a href="/d/dachau/index.html">Dachau</a></li><li><a href="/d/dachau-museum/index.html">Dachau Museum</a></li><li><a href="/d/dachau-trials/index.html">Dachau Trials</a></li><li><a href="/d/daluege-kurt-2/index.html">Daluege, Kurt</a></li><li><a href="/d/damjanovic-momcilo/index.html">Damjanovi&#263;, Mom&#269;ilo</a></li><li><a href="/d/davydov-vladimir/index.html">Davydov, Vladimir</a></li><li><a href="/d/dawidowski-roman/index.html">Dawidowski, Roman</a></li><li><a href="/d/ddt/index.html">DDT</a></li><li><a href="/e/evacuations-from-german-camps/index.html">death marches</a></li><li><a href="/e/exaggerated-death-tolls/index.html">death tolls</a></li><li><a href="/w/wael-monique-de/index.html">Defonseca, Misha</a></li><li><a href="/d/degesch/index.html">DEGESCH</a></li><li><a href="/d/dejaco-walter/index.html">Dejaco, Walter</a></li><li><a href="/d/demjanjuk-john/index.html">Demjanjuk, John</a></li><li><a href="/d/demography-jewish/index.html">Demography, Jewish</a></li><li><a href="/d/denisow-piotr/index.html">Denisow, Piotr</a></li><li><a href="/d/denmark/index.html">Denmark</a></li><li><a href="/r/resettlement/index.html">deportation</a></li><li><a href="/d/dibowski-wilhelm/index.html">Dibowski, Wilhelm</a></li><li><a href="/d/diesel-exhaust/index.html">Diesel Exhaust</a></li><li><a href="/f/fumigation-gas-chamber/index.html">disinfestation chamber</a></li><li><a href="/d/dlugoborski-waclaw/index.html">D&#322;ugoborski, W&aacute;c&#322;aw</a></li><li><a href="/d/doessekker-bruno/index.html">Doessekker, Bruno</a></li><li><a href="/d/doliner-iosif/index.html">Doliner, Iosif</a></li><li><a href="/g/gastight-doors/index.html">doors, gastight</a></li><li><a href="/d/dragon-abraham/index.html">Dragon, Abraham</a></li><li><a href="/d/dragon-szlama/index.html">Dragon, Szlama</a></li><li><a href="/d/dugin-itzhak/index.html">Dugin, Itzhak</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
