--- a/e/index.html
+++ b/e/index.html
@@ -17,35 +17,9 @@
 			<h2>
 				E
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/e/eberl-irmfried/index.html">Eberl, Irmfried</a></li>
-						<li><a href="/e/edelman-salman/index.html">Edelman, Salman</a></li>
-						<li><a href="/e/ehrenburg-ilya/index.html">Ehrenburg, Ilya</a></li>
-						<li><a href="/e/eichmann-adolf/index.html">Eichmann, Adolf</a></li>
-						<li><a href="/e/einsatzgruppen/index.html">Einsatzgruppen</a></li>
-						<li><a href="/e/eisenschmidt-eliezer/index.html">Eisenschmidt, Eliezer</a></li>
-						<li><a href="/e/eitan-dov/index.html">Eitan, Dov</a></li>
-						<li><a href="/e/emigration/index.html">Emigration</a></li>
-						<li><a href="/e/engel-chaim/index.html">Engel, Chaim</a></li>
-						<li><a href="/e/epstein-berthold/index.html">Epstein, Berthold</a></li>
-						<li><a href="/e/erber-josef/index.html">Erber, Josef</a></li>
-						<li><a href="/o/operation-harvest-festival/index.html">Erntefest</a></li>
-						<li><a href="/e/escapes-from-gas-chamber/index.html">Escapes, from Gas Chamber</a></li>
-						<li><a href="/e/euthanasia/index.html">Euthanasia</a></li>
-						<li><a href="/e/euthanasia/index.html">Euthanasia</a></li>
-						<li><a href="/e/evacuations-from-german-camps/index.html">Evacuations, from German Camps</a></li>
-						<li><a href="/e/evidence/index.html">Evidence</a></li>
-						<li><a href="/e/exaggerated-death-tolls/index.html">Exaggerated Death Tolls</a></li>
-						<li><a href="/e/excavations-of-german-mass-graves/index.html">Excavations, of German Mass Graves</a></li>
-						<li><a href="/e/execution-chambers/index.html">Execution Chambers</a></li>
-						<li><a href="/e/exotic-murder-weapons/index.html">Exotic Murder Weapons</a></li>
-						<li><a href="/e/explosives-as-a-murder-weapon/index.html">Explosives, as a Murder Weapon</a></li>
-						<li><a href="/e/explosives-to-erase-corpses/index.html">Explosives, to Erase Corpses</a></li>
-						<li><a href="/e/extermination-camps/index.html">Extermination Camps</a></li>
-						<li><a href="/e/extirpation/index.html">Extirpation</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "e.incl" -->
+<ul class="columns"><li><a href="/e/eberl-irmfried/index.html">Eberl, Irmfried</a></li><li><a href="/e/edelman-salman/index.html">Edelman, Salman</a></li><li><a href="/e/ehrenburg-ilya/index.html">Ehrenburg, Ilya</a></li><li><a href="/e/eichmann-adolf/index.html">Eichmann, Adolf</a></li><li><a href="/e/einsatzgruppen/index.html">Einsatzgruppen</a></li><li><a href="/e/eisenschmidt-eliezer/index.html">Eisenschmidt, Eliezer</a></li><li><a href="/e/eitan-dov/index.html">Eitan, Dov</a></li><li><a href="/e/emigration/index.html">Emigration</a></li><li><a href="/e/engel-chaim/index.html">Engel, Chaim</a></li><li><a href="/e/epstein-berthold/index.html">Epstein, Berthold</a></li><li><a href="/e/erber-josef/index.html">Erber, Josef</a></li><li><a href="/o/operation-harvest-festival/index.html">Erntefest</a></li><li><a href="/e/escapes-from-gas-chamber/index.html">Escapes, from Gas Chamber</a></li><li><a href="/e/euthanasia/index.html">Euthanasia</a></li><li><a href="/e/euthanasia/index.html">Euthanasia</a></li><li><a href="/e/evacuations-from-german-camps/index.html">Evacuations, from German Camps</a></li><li><a href="/e/evidence/index.html">Evidence</a></li><li><a href="/e/exaggerated-death-tolls/index.html">Exaggerated Death Tolls</a></li><li><a href="/e/excavations-of-german-mass-graves/index.html">Excavations, of German Mass Graves</a></li><li><a href="/e/execution-chambers/index.html">Execution Chambers</a></li><li><a href="/e/exotic-murder-weapons/index.html">Exotic Murder Weapons</a></li><li><a href="/e/explosives-as-a-murder-weapon/index.html">Explosives, as a Murder Weapon</a></li><li><a href="/e/explosives-to-erase-corpses/index.html">Explosives, to Erase Corpses</a></li><li><a href="/e/extermination-camps/index.html">Extermination Camps</a></li><li><a href="/e/extirpation/index.html">Extirpation</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
