--- a/f/index.html
+++ b/f/index.html
@@ -17,50 +17,9 @@
 			<h2>
 				F
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/f/fabian-bela/index.html">Fabian, Bela</a></li>
-						<li><a href="/f/faitelson-alex/index.html">Faitelson, Alex</a></li>
-						<li><a href="/f/fajgielbaum-srul/index.html">Fajgielbaum, Srul</a></li>
-						<li><a href="/j/jankowski-stanislaw/index.html">Fajnzylberg, Alter</a></li>
-						<li><a href="/f/falborski-bronislaw/index.html">Falborski, Bronis&#322;aw</a></li>
-						<li><a href="/f/false-witnesses/index.html">False Witnesses</a></li>
-						<li><a href="/f/false-memory-syndrome/index.html">False-Memory Syndrome</a></li>
-						<li><a href="/f/family-camp-at-auschwitz/index.html">Family Camp, at Auschwitz</a></li>
-						<li><a href="/f/farber-yuri/index.html">Farber, Yuri</a></li>
-						<li><a href="/f/farkas-henry/index.html">Farkas, Henry</a></li>
-						<li><a href="/b/bunkers/index.html">farmhouses, makeshift gas chambers at Birkenau</a></li>
-						<li><a href="/f/fat-extracted-from-burning-corpses/index.html">Fat, Extracted from Burning Corpses</a></li>
-						<li><a href="/f/feldhendler-leon/index.html">Feldhendler, Leon</a></li>
-						<li><a href="/j/jankowski-stanislaw/index.html">Feinsilber, Alter</a></li>
-						<li><a href="/f/felenbaum-weiss-hella/index.html">Felenbaum-Weiss, Hella</a></li>
-						<li><a href="/f/final-solution/index.html">Final Solution</a></li>
-						<li><a href="/f/finkelsztein-leon/index.html">Finkelsztein, Leon</a></li>
-						<li><a href="/f/first-gassing-at-auschwitz/index.html">First Gassing, at Auschwitz</a></li>
-						<li><a href="/f/fischer-bruno/index.html">Fischer, Bruno</a></li>
-						<li><a href="/f/fischer-horst/index.html">Fischer, Horst</a></li>
-						<li><a href="/f/flames-out-of-crematory-chimneys/index.html">Flames, out of Crematory Chimneys</a></li>
-						<li><a href="/f/fliamenbaum-david/index.html">Fliamenbaum, David</a></li>
-						<li><a href="/f/florstedt-hermann/index.html">Florstedt, Hermann</a></li>
-						<li><a href="/f/flossenburg/index.html">Flossenb&uuml;rg</a></li>
-						<li><a href="/f/fort-ix/index.html">Fort IX</a></li>
-						<li><a href="/f/france/index.html">France</a></li>
-						<li><a href="/f/frank-anne/index.html">Frank, Anne</a></li>
-						<li><a href="/f/frank-hans/index.html">Frank, Hans</a></li>
-						<li><a href="/f/franke-gricksch-alfred/index.html">Franke-Gricksch, Alfred</a></li>
-						<li><a href="/f/frankfurt-auschwitz-show-trial/index.html">Frankfurt Auschwitz Show Trial</a></li>
-						<li><a href="/f/frankl-viktor/index.html">Frankl, Viktor</a></li>
-						<li><a href="/f/franz-kurt/index.html">Franz, Kurt</a></li>
-						<li><a href="/f/freiberg-ber/index.html">Freiberg, Ber</a></li>
-						<li><a href="/f/friedman-arnold/index.html">Friedman, Arnold</a></li>
-						<li><a href="/f/fries-jakob/index.html">Fries, Jakob</a></li>
-						<li><a href="/f/fritzsch-karl/index.html">Fritzsch, Karl</a></li>
-						<li><a href="/f/frosch-chaim/index.html">Frosch, Chaim</a></li>
-						<li><a href="/f/fumigation-gas-chamber/index.html">Fumigation Gas Chamber</a></li>
-						<li><a href="/h/hitler-order/index.html">F&uuml;hrer Order</a></li>
-						<li><a href="/f/furnace/index.html">Furnace</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "f.incl" -->
+<ul class="columns"><li><a href="/f/fabian-bela/index.html">Fabian, Bela</a></li><li><a href="/f/faitelson-alex/index.html">Faitelson, Alex</a></li><li><a href="/f/fajgielbaum-srul/index.html">Fajgielbaum, Srul</a></li><li><a href="/j/jankowski-stanislaw/index.html">Fajnzylberg, Alter</a></li><li><a href="/f/falborski-bronislaw/index.html">Falborski, Bronis&#322;aw</a></li><li><a href="/f/false-witnesses/index.html">False Witnesses</a></li><li><a href="/f/false-memory-syndrome/index.html">False-Memory Syndrome</a></li><li><a href="/f/family-camp-at-auschwitz/index.html">Family Camp, at Auschwitz</a></li><li><a href="/f/farber-yuri/index.html">Farber, Yuri</a></li><li><a href="/f/farkas-henry/index.html">Farkas, Henry</a></li><li><a href="/b/bunkers/index.html">farmhouses, makeshift gas chambers at Birkenau</a></li><li><a href="/f/fat-extracted-from-burning-corpses/index.html">Fat, Extracted from Burning Corpses</a></li><li><a href="/f/feldhendler-leon/index.html">Feldhendler, Leon</a></li><li><a href="/j/jankowski-stanislaw/index.html">Feinsilber, Alter</a></li><li><a href="/f/felenbaum-weiss-hella/index.html">Felenbaum-Weiss, Hella</a></li><li><a href="/f/final-solution/index.html">Final Solution</a></li><li><a href="/f/finkelsztein-leon/index.html">Finkelsztein, Leon</a></li><li><a href="/f/first-gassing-at-auschwitz/index.html">First Gassing, at Auschwitz</a></li><li><a href="/f/fischer-bruno/index.html">Fischer, Bruno</a></li><li><a href="/f/fischer-horst/index.html">Fischer, Horst</a></li><li><a href="/f/flames-out-of-crematory-chimneys/index.html">Flames, out of Crematory Chimneys</a></li><li><a href="/f/fliamenbaum-david/index.html">Fliamenbaum, David</a></li><li><a href="/f/florstedt-hermann/index.html">Florstedt, Hermann</a></li><li><a href="/f/flossenburg/index.html">Flossenb&uuml;rg</a></li><li><a href="/f/fort-ix/index.html">Fort IX</a></li><li><a href="/f/france/index.html">France</a></li><li><a href="/f/frank-anne/index.html">Frank, Anne</a></li><li><a href="/f/frank-hans/index.html">Frank, Hans</a></li><li><a href="/f/franke-gricksch-alfred/index.html">Franke-Gricksch, Alfred</a></li><li><a href="/f/frankfurt-auschwitz-show-trial/index.html">Frankfurt Auschwitz Show Trial</a></li><li><a href="/f/frankl-viktor/index.html">Frankl, Viktor</a></li><li><a href="/f/franz-kurt/index.html">Franz, Kurt</a></li><li><a href="/f/freiberg-ber/index.html">Freiberg, Ber</a></li><li><a href="/f/friedman-arnold/index.html">Friedman, Arnold</a></li><li><a href="/f/fries-jakob/index.html">Fries, Jakob</a></li><li><a href="/f/fritzsch-karl/index.html">Fritzsch, Karl</a></li><li><a href="/f/frosch-chaim/index.html">Frosch, Chaim</a></li><li><a href="/f/fumigation-gas-chamber/index.html">Fumigation Gas Chamber</a></li><li><a href="/h/hitler-order/index.html">F&uuml;hrer Order</a></li><li><a href="/f/furnace/index.html">Furnace</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
