--- a/h/index.html
+++ b/h/index.html
@@ -17,43 +17,9 @@
 			<h2>
 				H
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/e/emigration/index.html">Haavara Agreement</a></li>
-						<li><a href="/h/hahle-johannes/index.html">H&auml;hle, Johannes</a></li>
-						<li><a href="/h/hair-of-deportees/index.html">Hair of Deportees</a></li>
-						<li><a href="/h/hanel-salomea/index.html">Hanel, Salomea</a></li>
-						<li><a href="/h/hartheim/index.html">Hartheim</a></li>
-						<li><a href="/o/operation-harvest-festival/index.html">Harvest Festival</a></li>
-						<li><a href="/h/hassler-johann/index.html">Hassler, Johann</a></li>
-						<li><a href="/h/healthcare/index.html">Healthcare</a></li>
-						<li><a href="/h/henocque-georges/index.html">H&eacute;nocque, Georges</a></li>
-						<li><a href="/h/herman-chaim/index.html">Herman, Chaim</a></li>
-						<li><a href="/h/heydrich-reinhardt/index.html">Heydrich, Reinhardt</a></li>
-						<li><a href="/h/himmler-speeches/index.html">Himmler Speeches</a></li>
-						<li><a href="/h/himmler-visits/index.html">Himmler Visits</a></li>
-						<li><a href="/h/himmler-heinrich/index.html">Himmler, Heinrich</a></li>
-						<li><a href="/h/hirszman-chaim/index.html">Hirszman, Chaim</a></li>
-						<li><a href="/h/hirt-joseph/index.html">Hirt, Joseph</a></li>
-						<li><a href="/h/hitler-order/index.html">Hitler Order, Final Solution</a></li>
-						<li><a href="/h/hitler-adolf/index.html">Hitler, Adolf</a></li>
-						<li><a href="/h/hofer-fritz/index.html">H&ouml;fer, Fritz</a></li>
-						<li><a href="/h/hofle-hans/index.html">H&ouml;fle, Hans</a></li>
-						<li><a href="/h/hofmann-ernst/index.html">Hofmann, Ernst</a></li>
-						<li><a href="/h/holocaust-indoctrination/index.html">Holocaust Indoctrination</a></li>
-						<li><a href="/h/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism</a></li>
-						<li><a href="/h/holocaust-the/index.html">Holocaust, the</a></li>
-						<li><a href="/h/holstein-bernard/index.html">Holstein, Bernard</a></li>
-						<li><a href="/h/homicidal-gas-chambers/index.html">Homicidal Gas Chamber</a></li>
-						<li><a href="/h/homosexuals/index.html">Homosexuals</a></li>
-						<li><a href="/h/hoss-rudolf/index.html">H&ouml;ss, Rudolf</a></li>
-						<li><a href="/h/hossler-franz/index.html">H&ouml;ssler, Franz</a></li>
-						<li><a href="/h/hottl-wilhelm/index.html">H&ouml;ttl, Wilhelm</a></li>
-						<li><a href="/e/erber-josef/index.html">Houstek</a></li>
-						<li><a href="/h/hungary/index.html">Hungary</a></li>
-						<li><a href="/h/hydrogen-cyanide/index.html">Hydrogen Cyanide</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "h.incl" -->
+<ul class="columns"><li><a href="/e/emigration/index.html">Haavara Agreement</a></li><li><a href="/h/hahle-johannes/index.html">H&auml;hle, Johannes</a></li><li><a href="/h/hair-of-deportees/index.html">Hair of Deportees</a></li><li><a href="/h/hanel-salomea/index.html">Hanel, Salomea</a></li><li><a href="/h/hartheim/index.html">Hartheim</a></li><li><a href="/o/operation-harvest-festival/index.html">Harvest Festival</a></li><li><a href="/h/hassler-johann/index.html">Hassler, Johann</a></li><li><a href="/h/healthcare/index.html">Healthcare</a></li><li><a href="/h/henocque-georges/index.html">H&eacute;nocque, Georges</a></li><li><a href="/h/herman-chaim/index.html">Herman, Chaim</a></li><li><a href="/h/heydrich-reinhardt/index.html">Heydrich, Reinhardt</a></li><li><a href="/h/himmler-speeches/index.html">Himmler Speeches</a></li><li><a href="/h/himmler-visits/index.html">Himmler Visits</a></li><li><a href="/h/himmler-heinrich/index.html">Himmler, Heinrich</a></li><li><a href="/h/hirszman-chaim/index.html">Hirszman, Chaim</a></li><li><a href="/h/hirt-joseph/index.html">Hirt, Joseph</a></li><li><a href="/h/hitler-order/index.html">Hitler Order, Final Solution</a></li><li><a href="/h/hitler-adolf/index.html">Hitler, Adolf</a></li><li><a href="/h/hofer-fritz/index.html">H&ouml;fer, Fritz</a></li><li><a href="/h/hofle-hans/index.html">H&ouml;fle, Hans</a></li><li><a href="/h/hofmann-ernst/index.html">Hofmann, Ernst</a></li><li><a href="/h/holocaust-indoctrination/index.html">Holocaust Indoctrination</a></li><li><a href="/h/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism</a></li><li><a href="/h/holocaust-the/index.html">Holocaust, the</a></li><li><a href="/h/holstein-bernard/index.html">Holstein, Bernard</a></li><li><a href="/h/homicidal-gas-chambers/index.html">Homicidal Gas Chamber</a></li><li><a href="/h/homosexuals/index.html">Homosexuals</a></li><li><a href="/h/hoss-rudolf/index.html">H&ouml;ss, Rudolf</a></li><li><a href="/h/hossler-franz/index.html">H&ouml;ssler, Franz</a></li><li><a href="/h/hottl-wilhelm/index.html">H&ouml;ttl, Wilhelm</a></li><li><a href="/e/erber-josef/index.html">Houstek</a></li><li><a href="/h/hungary/index.html">Hungary</a></li><li><a href="/h/hydrogen-cyanide/index.html">Hydrogen Cyanide</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
