--- a/j/index.html
+++ b/j/index.html
@@ -17,17 +17,9 @@
 			<h2>
 				J
 			</h2>
-			<div id="toc">
-				<ul class="columns">
-					<li><a href="/j/jager-report/index.html">J&auml;ger Report</a></li>
-					<li><a href="/j/jager-karl/index.html">J&auml;ger, Karl</a></li>
-					<li><a href="/j/jankowski-stanislaw/index.html">Jankowski, Stanis&#322;aw</a></li>
-					<li><a href="/j/janowska-camp/index.html">Janowska Camp</a></li>
-					<li><a href="/j/jasenovac/index.html">Jasenovac</a></li>
-					<li><a href="/j/jehovas-witnesses/index.html">Jehova&rsquo;s Witnesses</a></li>
-					<li><a href="/g/gaubschat-company/index.html">Just Document</a></li>
-				</ul>
-			</div>
+<!-- #bbinclude "j.incl" -->
+<ul class="columns"><li><a href="/j/jager-report/index.html">J&auml;ger Report</a></li><li><a href="/j/jager-karl/index.html">J&auml;ger, Karl</a></li><li><a href="/j/jankowski-stanislaw/index.html">Jankowski, Stanis&#322;aw</a></li><li><a href="/j/janowska-camp/index.html">Janowska Camp</a></li><li><a href="/j/jasenovac/index.html">Jasenovac</a></li><li><a href="/j/jehovas-witnesses/index.html">Jehova&rsquo;s Witnesses</a></li><li><a href="/g/gaubschat-company/index.html">Just Document</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
