--- a/k/index.html
+++ b/k/index.html
@@ -17,51 +17,9 @@
 			<h2>
 				K
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/k/kaduk-oswald/index.html">Kaduk, Oswald</a></li>
-						<li><a href="/k/kaindl-anton/index.html">Kaindl, Anton</a></li>
-						<li><a href="/k/kaltenbrunner-ernst/index.html">Kaltenbrunner, Ernst</a></li>
-						<li><a href="/k/kammler-hans/index.html">Kammler, Hans</a></li>
-						<li><a href="/k/kaper-yakov/index.html">Kaper, Yakov</a></li>
-						<li><a href="/k/karasik-avraham/index.html">Karasik, Avraham</a></li>
-						<li><a href="/k/karolinskij-samij/index.html">Karolinskij, Samij</a></li>
-						<li><a href="/k/karski-jan/index.html">Karski, Jan</a></li>
-						<li><a href="/k/karvat-david/index.html">Karvat, David</a></li>
-						<li><a href="/k/kaufmann-schafranov-sofia/index.html">Kaufmann Schafranov, Sofia</a></li>
-						<li><a href="/k/kaufmann-jeannette/index.html">Kaufmann, Jeannette</a></li>
-						<li><a href="/k/kerch/index.html">Kerch</a></li>
-						<li><a href="/k/kersch-silvia/index.html">Kersch, Silvia</a></li>
-						<li><a href="/k/kertesz-imre/index.html">Kert&eacute;sz, Imre</a></li>
-						<li><a href="/k/kharkov/index.html">Kharkov</a></li>
-						<li><a href="/k/klehr-josef/index.html">Klehr, Josef</a></li>
-						<li><a href="/k/klein-marc/index.html">Klein, Marc</a></li>
-						<li><a href="/k/klooga/index.html">Klooga</a></li>
-						<li><a href="/k/koch-ilse/index.html">Koch, Ilse</a></li>
-						<li><a href="/k/koch-karl-otto/index.html">Koch, Karl-Otto</a></li>
-						<li><i><a href="/c/commissars-order/index.html">Kommissarsbefehl</a></i></li>
-						<li><a href="/k/kon-abe/index.html">Kon, Abe</a></li>
-						<li><a href="/k/kon-stanislaw/index.html">Kon, Stanis&#322;aw</a></li>
-						<li><a href="/k/korherr-richard/index.html">Korherr, Richard</a></li>
-						<li><a href="/k/korherr-richard/index.html">Korherr Report</a></li>
-						<li><a href="/k/korn-moische/index.html">Korn, Moische</a></li>
-						<li><a href="/k/kosinski-jerzy/index.html">Kosinski, Jerzy</a></li>
-						<li><a href="/k/kosow-podlaski/index.html">Kos&oacute;w Podlaski</a></li>
-						<li><a href="/k/kozak-stanislaw/index.html">Kozak, Stanis&#322;aw</a></li>
-						<li><a href="/k/kramer-josef/index.html">Kramer, Josef</a></li>
-						<li><a href="/k/kranz-hermine/index.html">Kranz, Hermine</a></li>
-						<li><a href="/k/krasnodar/index.html">Krasnodar</a></li>
-						<li><a href="/k/kraus-ota/index.html">Kraus, Ota</a></li>
-						<li><a href="/k/kremer-johann-paul/index.html">Kremer, Johann Paul</a></li>
-						<li><a href="/c/crystal-night/index.html">Kristallnacht</a> </li>
-						<li><a href="/k/krzepicki-abraham/index.html">Krzepicki, Abraham</a></li>
-						<li><a href="/k/kudlik-aleksander/index.html">Kudlik, Aleksander</a></li>
-						<li><a href="/k/kuklia-vladislav/index.html">Kuklia, Vladislav</a></li>
-						<li><a href="/k/kula-michal/index.html">Kula, Micha&#322;</a></li>
-						<li><a href="/k/kulka-erich/index.html">Kulka, Erich</a></li>
-						<li><a href="/c/chelmno/index.html">Kulmhof</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "k.incl" -->
+<ul class="columns"><li><a href="/k/kaduk-oswald/index.html">Kaduk, Oswald</a></li><li><a href="/k/kaindl-anton/index.html">Kaindl, Anton</a></li><li><a href="/k/kaltenbrunner-ernst/index.html">Kaltenbrunner, Ernst</a></li><li><a href="/k/kammler-hans/index.html">Kammler, Hans</a></li><li><a href="/k/kaper-yakov/index.html">Kaper, Yakov</a></li><li><a href="/k/karasik-avraham/index.html">Karasik, Avraham</a></li><li><a href="/k/karolinskij-samij/index.html">Karolinskij, Samij</a></li><li><a href="/k/karski-jan/index.html">Karski, Jan</a></li><li><a href="/k/karvat-david/index.html">Karvat, David</a></li><li><a href="/k/kaufmann-schafranov-sofia/index.html">Kaufmann Schafranov, Sofia</a></li><li><a href="/k/kaufmann-jeannette/index.html">Kaufmann, Jeannette</a></li><li><a href="/k/kerch/index.html">Kerch</a></li><li><a href="/k/kersch-silvia/index.html">Kersch, Silvia</a></li><li><a href="/k/kertesz-imre/index.html">Kert&eacute;sz, Imre</a></li><li><a href="/k/kharkov/index.html">Kharkov</a></li><li><a href="/k/klehr-josef/index.html">Klehr, Josef</a></li><li><a href="/k/klein-marc/index.html">Klein, Marc</a></li><li><a href="/k/klooga/index.html">Klooga</a></li><li><a href="/k/koch-ilse/index.html">Koch, Ilse</a></li><li><a href="/k/koch-karl-otto/index.html">Koch, Karl-Otto</a></li><li><i><a href="/c/commissars-order/index.html">Kommissarsbefehl</a></i></li><li><a href="/k/kon-abe/index.html">Kon, Abe</a></li><li><a href="/k/kon-stanislaw/index.html">Kon, Stanis&#322;aw</a></li><li><a href="/k/korherr-richard/index.html">Korherr, Richard</a></li><li><a href="/k/korherr-richard/index.html">Korherr Report</a></li><li><a href="/k/korn-moische/index.html">Korn, Moische</a></li><li><a href="/k/kosinski-jerzy/index.html">Kosinski, Jerzy</a></li><li><a href="/k/kosow-podlaski/index.html">Kos&oacute;w Podlaski</a></li><li><a href="/k/kozak-stanislaw/index.html">Kozak, Stanis&#322;aw</a></li><li><a href="/k/kramer-josef/index.html">Kramer, Josef</a></li><li><a href="/k/kranz-hermine/index.html">Kranz, Hermine</a></li><li><a href="/k/krasnodar/index.html">Krasnodar</a></li><li><a href="/k/kraus-ota/index.html">Kraus, Ota</a></li><li><a href="/k/kremer-johann-paul/index.html">Kremer, Johann Paul</a></li><li><a href="/c/crystal-night/index.html">Kristallnacht</a></li><li><a href="/k/krzepicki-abraham/index.html">Krzepicki, Abraham</a></li><li><a href="/k/kudlik-aleksander/index.html">Kudlik, Aleksander</a></li><li><a href="/k/kuklia-vladislav/index.html">Kuklia, Vladislav</a></li><li><a href="/k/kula-michal/index.html">Kula, Micha&#322;</a></li><li><a href="/k/kulka-erich/index.html">Kulka, Erich</a></li><li><a href="/c/chelmno/index.html">Kulmhof</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
