--- a/m/index.html
+++ b/m/index.html
@@ -17,41 +17,9 @@
 			<h2>
 				M
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/m/madagascar/index.html">Madagascar</a></li>
-						<li><a href="/m/majdanek/index.html">Majdanek</a></li>
-						<li><a href="/m/majdanek-museum/index.html">Majdanek Museum</a></li>
-						<li><a href="/m/majdanek-trials/index.html">Majdanek Trials</a></li>
-						<li><a href="/m/maly-trostenets/index.html">Maly Trostenets</a></li>
-						<li><a href="/m/mandelbaum-henryk/index.html">Mandelbaum, Henryk</a></li>
-						<li><a href="/m/mansfeld-geza/index.html">Mansfeld, G&eacute;za</a></li>
-						<li><a href="/m/manusevich-david/index.html">Manusevich, David</a></li>
-						<li><a href="/m/marco-enric/index.html">Marco, Enric</a></li>
-						<li><a href="/m/marcus-kurt/index.html">Marcus, Kurt</a></li>
-						<li><a href="/m/marijampole/index.html">Marijampole</a></li>
-						<li><a href="/m/marsalek-hans/index.html">Mar&scaron;&aacute;lek, Hans</a></li>
-						<li><a href="/m/mass-graves/index.html">Mass Graves</a></li>
-						<li><a href="/m/mauthausen/index.html">Mauthausen</a></li>
-						<li><a href="/m/mengele-josef/index.html">Mengele, Josef</a></li>
-						<li><a href="/m/mermelstein-mel/index.html">Mermelstein, Mel</a></li>
-						<li><a href="/m/metz-zelda/index.html">Metz, Zelda</a></li>
-						<li><a href="/m/microwave-delousing/index.html">Microwave Delousing</a></li>
-						<li><a href="/m/mogilev/index.html">Mogilev</a></li>
-						<li><a href="/m/moll-otto/index.html">Moll, Otto</a></li>
-						<li><a href="/m/monowitz/index.html">Monowitz</a></li>
-						<li><a href="/c/czechia/index.html">Moravia</a></li>
-						<li><a href="/m/mordowicz-czeslaw/index.html">Mordowicz, Czes&#322;aw</a></li>
-						<li><a href="/m/morgen-konrad/index.html">Morgen, Konrad</a></li>
-						<li><a href="/m/morgues/index.html">Morgues</a></li>
-						<li><a href="/m/motives/index.html">Motives</a></li>
-						<li><a href="/m/mottel-samet/index.html">Mottel, Samet</a></li>
-						<li><a href="/m/muller-filip/index.html">M&uuml;ller, Filip</a></li>
-						<li><a href="/m/munch-hans/index.html">M&uuml;nch, Hans</a></li>
-						<li><a href="/t/tools-of-mass-murder/index.html">murder weapons</a></li>
-						<li><a href="/m/mussfeldt-erich/index.html">Mussfeldt, Erich</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "m.incl" -->
+<ul class="columns"><li><a href="/m/madagascar/index.html">Madagascar</a></li><li><a href="/m/majdanek/index.html">Majdanek</a></li><li><a href="/m/majdanek-museum/index.html">Majdanek Museum</a></li><li><a href="/m/majdanek-trials/index.html">Majdanek Trials</a></li><li><a href="/m/maly-trostenets/index.html">Maly Trostenets</a></li><li><a href="/m/mandelbaum-henryk/index.html">Mandelbaum, Henryk</a></li><li><a href="/m/mansfeld-geza/index.html">Mansfeld, G&eacute;za</a></li><li><a href="/m/manusevich-david/index.html">Manusevich, David</a></li><li><a href="/m/marco-enric/index.html">Marco, Enric</a></li><li><a href="/m/marcus-kurt/index.html">Marcus, Kurt</a></li><li><a href="/m/marijampole/index.html">Marijampole</a></li><li><a href="/m/marsalek-hans/index.html">Mar&scaron;&aacute;lek, Hans</a></li><li><a href="/m/mass-graves/index.html">Mass Graves</a></li><li><a href="/m/mauthausen/index.html">Mauthausen</a></li><li><a href="/m/mengele-josef/index.html">Mengele, Josef</a></li><li><a href="/m/mermelstein-mel/index.html">Mermelstein, Mel</a></li><li><a href="/m/metz-zelda/index.html">Metz, Zelda</a></li><li><a href="/m/microwave-delousing/index.html">Microwave Delousing</a></li><li><a href="/m/mogilev/index.html">Mogilev</a></li><li><a href="/m/moll-otto/index.html">Moll, Otto</a></li><li><a href="/m/monowitz/index.html">Monowitz</a></li><li><a href="/c/czechia/index.html">Moravia</a></li><li><a href="/m/mordowicz-czeslaw/index.html">Mordowicz, Czes&#322;aw</a></li><li><a href="/m/morgen-konrad/index.html">Morgen, Konrad</a></li><li><a href="/m/morgues/index.html">Morgues</a></li><li><a href="/m/motives/index.html">Motives</a></li><li><a href="/m/mottel-samet/index.html">Mottel, Samet</a></li><li><a href="/m/muller-filip/index.html">M&uuml;ller, Filip</a></li><li><a href="/m/munch-hans/index.html">M&uuml;nch, Hans</a></li><li><a href="/t/tools-of-mass-murder/index.html">murder weapons</a></li><li><a href="/m/mussfeldt-erich/index.html">Mussfeldt, Erich</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
