--- a/n/index.html
+++ b/n/index.html
@@ -17,23 +17,9 @@
 			<h2>
 				N
 			</h2>
-			<div id="toc">
-				<ul class="columns">
-					<li><a href="/n/nadsari-marcel/index.html">Nadsari, Marcel</a></li>
-					<li><a href="/n/nagraba-ludwik/index.html">Nagraba, Ludwik</a></li>
-					<li><a href="/n/nahon-marco/index.html">Nahon, Marco</a></li>
-					<li><a href="/n/natzweiler/index.html">Natzweiler</a></li>
-					<li><a href="/n/nebe-arthur/index.html">Nebe, Arthur</a></li>
-					<li><a href="/n/netherlands/index.html">Netherlands</a></li>
-					<li><a href="/n/neuengamme/index.html">Neuengamme</a></li>
-					<li><a href="/n/nisko-plan/index.html">Nisko Plan</a></li>
-					<li><a href="/n/nordhausen/index.html">Nordhausen</a></li>
-					<li><a href="/n/norway/index.html">Norway</a></li>
-					<li><a href="/n/nowodowski-dawid/index.html">Nowodowski, Dawid</a></li>
-					<li><a href="/n/nuremberg-military-tribunals/index.html">Nuremberg Military Tribunals</a></li>
-					<li><a href="/n/nyiszli-miklos/index.html">Nyiszli, Miklos</a></li>
-				</ul>
-			</div>
+<!-- #bbinclude "n.incl" -->
+<ul class="columns"><li><a href="/n/nadsari-marcel/index.html">Nadsari, Marcel</a></li><li><a href="/n/nagraba-ludwik/index.html">Nagraba, Ludwik</a></li><li><a href="/n/nahon-marco/index.html">Nahon, Marco</a></li><li><a href="/n/natzweiler/index.html">Natzweiler</a></li><li><a href="/n/nebe-arthur/index.html">Nebe, Arthur</a></li><li><a href="/n/netherlands/index.html">Netherlands</a></li><li><a href="/n/neuengamme/index.html">Neuengamme</a></li><li><a href="/n/nisko-plan/index.html">Nisko Plan</a></li><li><a href="/n/nordhausen/index.html">Nordhausen</a></li><li><a href="/n/norway/index.html">Norway</a></li><li><a href="/n/nowodowski-dawid/index.html">Nowodowski, Dawid</a></li><li><a href="/n/nuremberg-military-tribunals/index.html">Nuremberg Military Tribunals</a></li><li><a href="/n/nyiszli-miklos/index.html">Nyiszli, Miklos</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
