--- a/p/index.html
+++ b/p/index.html
@@ -17,48 +17,9 @@
 			<h2>
 				P
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/p/packing-density-inside-gas-chamber/index.html">Packing Density, inside Gas Chamber</a></li>
-						<li><a href="/p/paisikovic-dov/index.html">Paisikovic, Dov</a></li>
-						<li><a href="/p/ponary/index.html">Paneriai</a></li>
-						<li><a href="/p/pankov-vassily/index.html">Pankov, Vassily</a></li>
-						<li><a href="/p/pechersky-alexander/index.html">Pechersky, Alexander</a></li>
-						<li><a href="/p/peer-moshe/index.html">Peer, Moshe</a></li>
-						<li><a href="/p/pfannenstiel-wilhelm/index.html">Pfannenstiel, Wilhelm</a></li>
-						<li><a href="/p/phantom-extermination-camps/index.html">Phantom Extermination Camps</a></li>
-						<li><a href="/p/phenol/index.html">Phenol</a></li>
-						<li><a href="/p/piazza-bruno/index.html">Piazza, Bruno</a></li>
-						<li><a href="/p/pilecki-witold/index.html">Pilecki, Witold</a></li>
-						<li><a href="/p/piller-walter/index.html">Piller, Walter</a></li>
-						<li><a href="/p/pilo-aaron/index.html">Pilo, Aaron</a></li>
-						<li><a href="/p/pilunov-ivanovich/index.html">Pilunov, Ivanovich</a></li>
-						<li><a href="/p/pinsk/index.html">Pinsk</a></li>
-						<li><a href="/p/pinter-stephen-f/index.html">Pinter, Stephen F.</a></li>
-						<li><a href="/o/open-air-incinerations/index.html">pit burnings</a></li>
-						<li><a href="/p/plan-to-exterminate-the-jews/index.html">Plan, to Exterminate the Jews</a></li>
-						<li><a href="/p/plucer-regina/index.html">Plucer, Regina</a></li>
-						<li><a href="/p/podchlebnik-michal/index.html">Podchlebnik, Micha&#322;</a></li>
-						<li><a href="/p/podchlebnik-salomon/index.html">Podchlebnik, Salomon</a></li>
-						<li><a href="/p/pohl-oswald/index.html">Pohl, Oswald</a></li>
-						<li><a href="/p/poland/index.html">Poland</a></li>
-						<li><a href="/p/polevoy-boris/index.html">Polevoy, Boris</a></li>
-						<li><a href="/p/polish-underground-reports/index.html">Polish Underground Reports</a></li>
-						<li><a href="/p/ponary/index.html">Ponary</a></li>
-						<li><a href="/d/demography-jewish/index.html">population statistics</a></li>
-						<li><a href="/h/himmler-speeches/index.html">Posen speeches</a></li>
-						<li><a href="/p/poswolski-henryk/index.html">Poswolski, Henryk</a></li>
-						<li><a href="/p/pradel-friedrich/index.html">Pradel, Friedrich</a></li>
-						<li><a href="/p/producer-gas/index.html">Producer Gas</a></li>
-						<li><a href="/p/pronicheva-dina/index.html">Pronicheva, Dina</a></li>
-						<li><a href="/p/propaganda/index.html">Propaganda</a></li>
-						<li><a href="/c/czechia/index.html">Protectorate</a></li>
-						<li><a href="/i/iron-blue/index.html">Prussian blue</a></li>
-						<li><a href="/p/puchala-lucjan/index.html">Pucha&#322;a, Lucjan</a></li>
-						<li><a href="/p/putzker-fritz/index.html">Putzker, Fritz</a></li>
-						<li><a href="/o/open-air-incinerations/index.html">pyres</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "p.incl" -->
+<ul class="columns"><li><a href="/p/packing-density-inside-gas-chamber/index.html">Packing Density, inside Gas Chamber</a></li><li><a href="/p/paisikovic-dov/index.html">Paisikovic, Dov</a></li><li><a href="/p/ponary/index.html">Paneriai</a></li><li><a href="/p/pankov-vassily/index.html">Pankov, Vassily</a></li><li><a href="/p/pechersky-alexander/index.html">Pechersky, Alexander</a></li><li><a href="/p/peer-moshe/index.html">Peer, Moshe</a></li><li><a href="/p/pfannenstiel-wilhelm/index.html">Pfannenstiel, Wilhelm</a></li><li><a href="/p/phantom-extermination-camps/index.html">Phantom Extermination Camps</a></li><li><a href="/p/phenol/index.html">Phenol</a></li><li><a href="/p/piazza-bruno/index.html">Piazza, Bruno</a></li><li><a href="/p/pilecki-witold/index.html">Pilecki, Witold</a></li><li><a href="/p/piller-walter/index.html">Piller, Walter</a></li><li><a href="/p/pilo-aaron/index.html">Pilo, Aaron</a></li><li><a href="/p/pilunov-ivanovich/index.html">Pilunov, Ivanovich</a></li><li><a href="/p/pinsk/index.html">Pinsk</a></li><li><a href="/p/pinter-stephen-f/index.html">Pinter, Stephen F.</a></li><li><a href="/o/open-air-incinerations/index.html">pit burnings</a></li><li><a href="/p/plan-to-exterminate-the-jews/index.html">Plan, to Exterminate the Jews</a></li><li><a href="/p/plucer-regina/index.html">Plucer, Regina</a></li><li><a href="/p/podchlebnik-michal/index.html">Podchlebnik, Micha&#322;</a></li><li><a href="/p/podchlebnik-salomon/index.html">Podchlebnik, Salomon</a></li><li><a href="/p/pohl-oswald/index.html">Pohl, Oswald</a></li><li><a href="/p/poland/index.html">Poland</a></li><li><a href="/p/polevoy-boris/index.html">Polevoy, Boris</a></li><li><a href="/p/polish-underground-reports/index.html">Polish Underground Reports</a></li><li><a href="/p/ponary/index.html">Ponary</a></li><li><a href="/d/demography-jewish/index.html">population statistics</a></li><li><a href="/h/himmler-speeches/index.html">Posen speeches</a></li><li><a href="/p/poswolski-henryk/index.html">Poswolski, Henryk</a></li><li><a href="/p/pradel-friedrich/index.html">Pradel, Friedrich</a></li><li><a href="/p/producer-gas/index.html">Producer Gas</a></li><li><a href="/p/pronicheva-dina/index.html">Pronicheva, Dina</a></li><li><a href="/p/propaganda/index.html">Propaganda</a></li><li><a href="/c/czechia/index.html">Protectorate</a></li><li><a href="/i/iron-blue/index.html">Prussian blue</a></li><li><a href="/p/puchala-lucjan/index.html">Pucha&#322;a, Lucjan</a></li><li><a href="/p/putzker-fritz/index.html">Putzker, Fritz</a></li><li><a href="/o/open-air-incinerations/index.html">pyres</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
