--- a/r/index.html
+++ b/r/index.html
@@ -17,46 +17,9 @@
 			<h2>
 				R
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/r/rabinowicz-jakub/index.html">Rabinowicz, Jakub</a></li>
-						<li><a href="/b/british-radio-intercepts/index.html">radio intercepts</a></li>
-						<li><a href="/r/rajchman-chil/index.html">Rajchman, Chil</a></li>
-						<li><a href="/r/rajgrodzki-jerzy/index.html">Rajgrodzki, Jerzy</a></li>
-						<li><a href="/r/rajsko/index.html">Rajsko</a></li>
-						<li><a href="/r/rajzman-samuel/index.html">Rajzman, Samuel</a></li>
-						<li><a href="/r/rascher-sigmund/index.html">Rascher, Sigmund</a></li>
-						<li><a href="/r/rassinier-paul/index.html">Rassinier, Paul</a></li>
-						<li><a href="/r/rauff-walter/index.html">Rauff, Walter</a></li>
-						<li><a href="/r/ravensbruck/index.html">Ravensbr&uuml;ck</a></li>
-						<li><a href="/r/razgonayev-mikhail/index.html">Razgonayev, Mikhail</a></li>
-						<li><a href="/r/red-cross/index.html">Red Cross</a></li>
-						<li><a href="/r/reder-rudolf/index.html">Reder, Rudolf</a></li>
-						<li><a href="/r/refeeding-syndrome/index.html">Refeeding Syndrome</a></li>
-						<li><a href="/r/rajchman-chil/index.html">Reichman(n), Henryk</a></li>
-						<li><a href="/r/rajchman-chil/index.html">Reichman(n), Ye(c)hiel</a></li>
-						<li><a href="/r/reichssicherheitshauptamt/index.html">Reichssicherheitshauptamt</a></li>
-						<li><a href="/r/religion-holocaust-as/index.html">Religion, Holocaust as</a></li>
-						<li><a href="/r/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
-						<li><a href="/c/compensation/index.html">reparations</a></li>
-						<li><a href="/r/resettlement/index.html">Resettlement</a></li>
-						<li><a href="/h/holocaust-skepticism-revisionism/index.html">revisionism</a></li>
-						<li><a href="/r/ringelblum-emanuel/index.html">Ringelblum Archives</a></li>
-						<li><a href="/r/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li>
-						<li><a href="/r/rogerie-andre/index.html">Rogerie, Andr&eacute;</a></li>
-						<li><a href="/r/rogner-adolf/index.html">R&ouml;gner, Adolf</a></li>
-						<li><a href="/r/romania/index.html">Romania</a></li>
-						<li><a href="/r/rosenberg-alfred/index.html">Rosenberg, Alfred</a></li>
-						<li><a href="/r/rosenberg-eliyahu/index.html">Rosenberg, Eliyahu</a></li>
-						<li><a href="/v/vrba-rudolf/index.html">Rosenberg, Walter</a></li>
-						<li><a href="/r/rosenblat-herman/index.html">Rosenblat, Herman</a></li>
-						<li><a href="/r/rosenblum-joshuah/index.html">Rosenblum, Joshuah</a></li>
-						<li><a href="/r/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li>
-						<li><a href="/r/rosenthal-maryla/index.html">Rosenthal, Maryla</a></li>
-						<li><a href="/r/rosin-arnost/index.html">Rosin, Arno&scaron;t</a></li>
-						<li><a href="/r/rumbula/index.html">Rumbula</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "r.incl" -->
+<ul class="columns"><li><a href="/r/rabinowicz-jakub/index.html">Rabinowicz, Jakub</a></li><li><a href="/b/british-radio-intercepts/index.html">radio intercepts</a></li><li><a href="/r/rajchman-chil/index.html">Rajchman, Chil</a></li><li><a href="/r/rajgrodzki-jerzy/index.html">Rajgrodzki, Jerzy</a></li><li><a href="/r/rajsko/index.html">Rajsko</a></li><li><a href="/r/rajzman-samuel/index.html">Rajzman, Samuel</a></li><li><a href="/r/rascher-sigmund/index.html">Rascher, Sigmund</a></li><li><a href="/r/rassinier-paul/index.html">Rassinier, Paul</a></li><li><a href="/r/rauff-walter/index.html">Rauff, Walter</a></li><li><a href="/r/ravensbruck/index.html">Ravensbr&uuml;ck</a></li><li><a href="/r/razgonayev-mikhail/index.html">Razgonayev, Mikhail</a></li><li><a href="/r/red-cross/index.html">Red Cross</a></li><li><a href="/r/reder-rudolf/index.html">Reder, Rudolf</a></li><li><a href="/r/refeeding-syndrome/index.html">Refeeding Syndrome</a></li><li><a href="/r/rajchman-chil/index.html">Reichman(n), Henryk</a></li><li><a href="/r/rajchman-chil/index.html">Reichman(n), Ye(c)hiel</a></li><li><a href="/r/reichssicherheitshauptamt/index.html">Reichssicherheitshauptamt</a></li><li><a href="/r/religion-holocaust-as/index.html">Religion, Holocaust as</a></li><li><a href="/r/renard-jean-paul/index.html">Renard, Jean-Paul</a></li><li><a href="/c/compensation/index.html">reparations</a></li><li><a href="/r/resettlement/index.html">Resettlement</a></li><li><a href="/h/holocaust-skepticism-revisionism/index.html">revisionism</a></li><li><a href="/r/ringelblum-emanuel/index.html">Ringelblum Archives</a></li><li><a href="/r/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li><li><a href="/r/rogerie-andre/index.html">Rogerie, Andr&eacute;</a></li><li><a href="/r/rogner-adolf/index.html">R&ouml;gner, Adolf</a></li><li><a href="/r/romania/index.html">Romania</a></li><li><a href="/r/rosenberg-alfred/index.html">Rosenberg, Alfred</a></li><li><a href="/r/rosenberg-eliyahu/index.html">Rosenberg, Eliyahu</a></li><li><a href="/v/vrba-rudolf/index.html">Rosenberg, Walter</a></li><li><a href="/r/rosenblat-herman/index.html">Rosenblat, Herman</a></li><li><a href="/r/rosenblum-joshuah/index.html">Rosenblum, Joshuah</a></li><li><a href="/r/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li><li><a href="/r/rosenthal-maryla/index.html">Rosenthal, Maryla</a></li><li><a href="/r/rosin-arnost/index.html">Rosin, Arno&scaron;t</a></li><li><a href="/r/rumbula/index.html">Rumbula</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
