--- a/g/index.html
+++ b/g/index.html
@@ -17,50 +17,9 @@
 			<h2>
 				G
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/g/gabai-dario/index.html">Gabai, Dario</a></li>
-						<li><a href="/g/gabai-yaakov/index.html">Gabai, Yaakov</a></li>
-						<li><a href="/g/gal-gyula/index.html">G&aacute;l, Gyula</a></li>
-						<li><a href="/g/garbarz-moshe/index.html">Garbarz, Mosh&eacute;</a></li>
-						<li><a href="/g/gas-chamber/index.html">Gas Chamber</a></li>
-						<li><a href="/g/gas-vans/index.html">Gas Vans</a></li>
-						<li><a href="/g/gastight-doors/index.html">Gastight Doors</a></li>
-						<li><a href="/g/gaubschat-company/index.html">Gaubschat Company</a></li>
-						<li><a href="/g/generalplan-ost/index.html">Generalplan Ost</a></li>
-						<li><a href="/p/producer-gas/index.html">generator gas</a></li>
-						<li><a href="/g/genocide/index.html">Genocide</a></li>
-						<li><a href="/g/germany/index.html">Germany</a></li>
-						<li><a href="/g/gerstein-kurt/index.html">Gerstein, Kurt</a></li>
-						<li><a href="/g/gertner-szaja/index.html">Gertner, Szaja</a></li>
-						<li><a href="/g/geysers-of-blood-from-mass-graves/index.html">Geysers of Blood, from Mass Graves</a></li>
-						<li><a href="/g/ghettos/index.html">Ghettos</a></li>
-						<li><a href="/g/glazar-richard/index.html">Glazar, Richard</a></li>
-						<li><a href="/g/globocnik-odilo/index.html">Globocnik, Odilo</a></li>
-						<li><a href="/g/glucks-richard/index.html">Gl&uuml;cks, Richard</a></li>
-						<li><a href="/g/goebbels-joseph/index.html">Goebbels, Joseph</a></li>
-						<li><a href="/g/gol-szloma/index.html">Gol, Szloma</a></li>
-						<li><a href="/g/gold-teeth/index.html">Gold Teeth</a></li>
-						<li><a href="/g/goldberg-szymon/index.html">Goldberg, Szymon</a></li>
-						<li><a href="/g/goldfarb-abraham-i/index.html">Goldfarb, Abraham I.</a></li>
-						<li><a href="/g/goring-hermann/index.html">G&ouml;ring, Hermann</a></li>
-						<li><a href="/g/goth-amon/index.html">G&ouml;th, Amon</a></li>
-						<li><a href="/g/grabner-maximilian/index.html">Grabner, Maximilian</a></li>
-						<li><a href="/g/gradowski-salmen/index.html">Gradowski, Salmen</a></li>
-						<li><a href="/g/gray-martin/index.html">Gray, Martin</a></li>
-						<li><a href="/g/greece/index.html">Greece</a></li>
-						<li><a href="/g/grocher-mietek/index.html">Grocher, Mietek</a></li>
-						<li><a href="/g/grojanowski-jakov/index.html">Grojanowski, Jakov</a></li>
-						<li><a href="/g/groning-oskar/index.html">Gr&ouml;ning, Oskar</a></li>
-						<li><a href="/g/gross-rosen/index.html">Gross-Rosen</a></li>
-						<li><a href="/g/grossman-vasily/index.html">Grossman, Vasily</a></li>
-						<li><a href="/g/groundwater-level/index.html">Groundwater Level</a></li>
-						<li><a href="/g/gruner-miklos/index.html">Gr&uuml;ner, Mikl&oacute;s</a></li>
-						<li><a href="/g/gulba-franciszek/index.html">Gulba, Franciszek</a></li>
-						<li><a href="/g/gusen/index.html">Gusen</a></li>
-						<li><a href="/g/gypsies/index.html">Gypsies</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "g.incl" -->
+<ul class="columns"><li><a href="/g/gabai-dario/index.html">Gabai, Dario</a></li><li><a href="/g/gabai-yaakov/index.html">Gabai, Yaakov</a></li><li><a href="/g/gal-gyula/index.html">G&aacute;l, Gyula</a></li><li><a href="/g/garbarz-moshe/index.html">Garbarz, Mosh&eacute;</a></li><li><a href="/g/gas-chamber/index.html">Gas Chamber</a></li><li><a href="/g/gas-vans/index.html">Gas Vans</a></li><li><a href="/g/gastight-doors/index.html">Gastight Doors</a></li><li><a href="/g/gaubschat-company/index.html">Gaubschat Company</a></li><li><a href="/g/generalplan-ost/index.html">Generalplan Ost</a></li><li><a href="/p/producer-gas/index.html">generator gas</a></li><li><a href="/g/genocide/index.html">Genocide</a></li><li><a href="/g/germany/index.html">Germany</a></li><li><a href="/g/gerstein-kurt/index.html">Gerstein, Kurt</a></li><li><a href="/g/gertner-szaja/index.html">Gertner, Szaja</a></li><li><a href="/g/geysers-of-blood-from-mass-graves/index.html">Geysers of Blood, from Mass Graves</a></li><li><a href="/g/ghettos/index.html">Ghettos</a></li><li><a href="/g/glazar-richard/index.html">Glazar, Richard</a></li><li><a href="/g/globocnik-odilo/index.html">Globocnik, Odilo</a></li><li><a href="/g/glucks-richard/index.html">Gl&uuml;cks, Richard</a></li><li><a href="/g/goebbels-joseph/index.html">Goebbels, Joseph</a></li><li><a href="/g/gol-szloma/index.html">Gol, Szloma</a></li><li><a href="/g/gold-teeth/index.html">Gold Teeth</a></li><li><a href="/g/goldberg-szymon/index.html">Goldberg, Szymon</a></li><li><a href="/g/goldfarb-abraham-i/index.html">Goldfarb, Abraham I.</a></li><li><a href="/g/goring-hermann/index.html">G&ouml;ring, Hermann</a></li><li><a href="/g/goth-amon/index.html">G&ouml;th, Amon</a></li><li><a href="/g/grabner-maximilian/index.html">Grabner, Maximilian</a></li><li><a href="/g/gradowski-salmen/index.html">Gradowski, Salmen</a></li><li><a href="/g/gray-martin/index.html">Gray, Martin</a></li><li><a href="/g/greece/index.html">Greece</a></li><li><a href="/g/grocher-mietek/index.html">Grocher, Mietek</a></li><li><a href="/g/grojanowski-jakov/index.html">Grojanowski, Jakov</a></li><li><a href="/g/groning-oskar/index.html">Gr&ouml;ning, Oskar</a></li><li><a href="/g/gross-rosen/index.html">Gross-Rosen</a></li><li><a href="/g/grossman-vasily/index.html">Grossman, Vasily</a></li><li><a href="/g/groundwater-level/index.html">Groundwater Level</a></li><li><a href="/g/gruner-miklos/index.html">Gr&uuml;ner, Mikl&oacute;s</a></li><li><a href="/g/gulba-franciszek/index.html">Gulba, Franciszek</a></li><li><a href="/g/gusen/index.html">Gusen</a></li><li><a href="/g/gypsies/index.html">Gypsies</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
