--- a/l/index.html
+++ b/l/index.html
@@ -17,44 +17,9 @@
 			<h2>
 				L
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/l/lampshades-of-human-skin/index.html">Lampshades, of Human Skin</a></li>
-						<li><a href="/l/langbein-hermann/index.html">Langbein, Hermann</a></li>
-						<li><a href="/l/langfus-leib/index.html">Langfus, Leib</a></li>
-						<li><a href="/l/laptos-leo/index.html">Laptos, Leo</a></li>
-						<li><a href="/l/larson-charles/index.html">Larson, Charles</a></li>
-						<li><a href="/b/baltic-countries/index.html">Latvia</a></li>
-						<li><a href="/d/ddt/index.html">Lauseto</a></li>
-						<li><a href="/l/lea-david/index.html">Lea, David</a></li>
-						<li><a href="/c/censorship/index.html">legislation, anti-revisionist</a></li>
-						<li><a href="/l/lviv/index.html">Lemberg</a></li>
-						<li><a href="/l/lengyel-olga/index.html">Lengyel, Olga</a></li>
-						<li><a href="/l/lequeux-maurice/index.html">Lequeux, Maurice</a></li>
-						<li><a href="/l/lerner-leon/index.html">Lerner, Leon</a></li>
-						<li><a href="/l/lesky-simcha/index.html">Lesky, Simcha</a></li>
-						<li><a href="/l/lethal-injections/index.html">Lethal Injections</a></li>
-						<li><a href="/l/lettich-andre/index.html">Lettich, Andr&eacute;</a></li>
-						<li><a href="/l/levi-primo/index.html">Levi, Primo</a></li>
-						<li><a href="/l/levy-robert/index.html">L&eacute;vy, Robert</a></li>
-						<li><a href="/l/lewental-salmen/index.html">Lewental, Salmen</a></li>
-						<li><a href="/l/lewinska-pelagia/index.html">Lewi&#324;ska, Pelagia</a></li>
-						<li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
-						<li><a href="/l/lichtmann-icek/index.html">Lichtmann, Icek</a></li>
-						<li><a href="/l/liebehenschel-arthur/index.html">Liebehenschel, Arthur</a></li>
-						<li><a href="/l/limousin-henri/index.html">Limousin, Henri</a></li>
-						<li><a href="/b/baltic-countries/index.html">Lithuania</a></li>
-						<li><a href="/l/litwinska-sofia/index.html">Litwinska, Sofia</a></li>
-						<li><a href="/l/lodz-ghetto/index.html">Lodz Ghetto</a></li>
-						<li><a href="/l/london-cage/index.html">London Cage</a></li>
-						<li><a href="/m/majdanek/index.html">Lublin</a></li>
-						<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz, Zdzis&#322;aw</a></li>
-						<li><a href="/l/lumberjacks/index.html">Lumberjacks</a></li>
-						<li><a href="/l/luxembourg/index.html">Luxembourg</a></li>
-						<li><a href="/l/lviv/index.html">Lviv</a></li>
-						<li><a href="/l/lviv/index.html">Lwow</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "l.incl" -->
+<ul class="columns"><li><a href="/l/lampshades-of-human-skin/index.html">Lampshades, of Human Skin</a></li><li><a href="/l/langbein-hermann/index.html">Langbein, Hermann</a></li><li><a href="/l/langfus-leib/index.html">Langfus, Leib</a></li><li><a href="/l/laptos-leo/index.html">Laptos, Leo</a></li><li><a href="/l/larson-charles/index.html">Larson, Charles</a></li><li><a href="/b/baltic-countries/index.html">Latvia</a></li><li><a href="/d/ddt/index.html">Lauseto</a></li><li><a href="/l/lea-david/index.html">Lea, David</a></li><li><a href="/c/censorship/index.html">legislation, anti-revisionist</a></li><li><a href="/l/lviv/index.html">Lemberg</a></li><li><a href="/l/lengyel-olga/index.html">Lengyel, Olga</a></li><li><a href="/l/lequeux-maurice/index.html">Lequeux, Maurice</a></li><li><a href="/l/lerner-leon/index.html">Lerner, Leon</a></li><li><a href="/l/lesky-simcha/index.html">Lesky, Simcha</a></li><li><a href="/l/lethal-injections/index.html">Lethal Injections</a></li><li><a href="/l/lettich-andre/index.html">Lettich, Andr&eacute;</a></li><li><a href="/l/levi-primo/index.html">Levi, Primo</a></li><li><a href="/l/levy-robert/index.html">L&eacute;vy, Robert</a></li><li><a href="/l/lewental-salmen/index.html">Lewental, Salmen</a></li><li><a href="/l/lewinska-pelagia/index.html">Lewi&#324;ska, Pelagia</a></li><li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li><li><a href="/l/lichtmann-icek/index.html">Lichtmann, Icek</a></li><li><a href="/l/liebehenschel-arthur/index.html">Liebehenschel, Arthur</a></li><li><a href="/l/limousin-henri/index.html">Limousin, Henri</a></li><li><a href="/b/baltic-countries/index.html">Lithuania</a></li><li><a href="/l/litwinska-sofia/index.html">Litwinska, Sofia</a></li><li><a href="/l/lodz-ghetto/index.html">Lodz Ghetto</a></li><li><a href="/l/london-cage/index.html">London Cage</a></li><li><a href="/m/majdanek/index.html">Lublin</a></li><li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz, Zdzis&#322;aw</a></li><li><a href="/l/lumberjacks/index.html">Lumberjacks</a></li><li><a href="/l/luxembourg/index.html">Luxembourg</a></li><li><a href="/l/lviv/index.html">Lviv</a></li><li><a href="/l/lviv/index.html">Lwow</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
