--- a/s/index.html
+++ b/s/index.html
@@ -17,79 +17,9 @@
 			<h2>
 				S
 			</h2>
-				<div id="toc">
-					<ul class="columns">
-						<li><a href="/s/sachsenhausen/index.html">Sachsenhausen</a></li>
-						<li><a href="/s/sackar-josef/index.html">Sackar, Josef</a></li>
-						<li><a href="/s/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li>
-						<li><a href="/s/semlin/index.html">Sajmi&scaron;te</a></li>
-						<li><a href="/s/saunas/index.html">Saunas</a></li>
-						<li><a href="/s/saurer-company/index.html">Saurer Company</a></li>
-						<li><a href="/s/schellekes-maurice/index.html">Schellekes, Maurice</a></li>
-						<li><a href="/s/schelvis-jules/index.html">Schelvis, Jules</a></li>
-						<li><a href="/s/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li>
-						<li><a href="/s/schwarz-deszo/index.html">Schwarz, Desz&ouml;</a></li>
-						<li><a href="/s/schwarzbart-ignacy/index.html">Schwarzbart, Ignacy</a></li>
-						<li><a href="/s/schwela-siegfried/index.html">Schwela, Siegfried</a></li>
-						<li><a href="/s/sehn-jan/index.html">Sehn, Jan</a></li>
-						<li><a href="/s/seidenwurm-wrzos-mary/index.html">Seidenwurm Wrzos, Mary</a></li>
-						<li><a href="/s/selections/index.html">Selections</a></li>
-						<li><a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a></li>
-						<li><a href="/s/semlin/index.html">Semlin</a></li>
-						<li><a href="/y/yugoslavia/index.html">Serbia</a></li>
-						<li><a href="/s/shanghai/index.html">Shanghai</a></li>
-						<li><a href="/s/sheftel-yoram/index.html">Sheftel, Yoram</a></li>
-						<li><a href="/s/shoes-of-deportees/index.html">Shoes of Deportees</a></li>
-						<li><a href="/m/microwave-delousing/index.html">shortwave delousing</a></li>
-						<li><a href="/s/show-trials/index.html">Show Trials</a></li>
-						<li><a href="/s/showers/index.html">Showers</a></li>
-						<li><a href="/s/shrunken-heads-myth-of/index.html">Shrunken Heads, Myth of</a></li>
-						<li><a href="/s/silberschein-abraham/index.html">Silberschein, Abraham</a></li>
-						<li><a href="/s/simpson-gordon/index.html">Simpson, Gordon</a></li>
-						<li><a href="/s/six-million/index.html">Six Million (Jewish Victims)</a></li>
-						<li><a href="/s/skarzynski-kazimierz/index.html">Skar&#380;y&#324;ski, Kazimierz</a></li>
-						<li><a href="/l/lampshades-of-human-skin/index.html">skin, human, used for objects</a></li>
-						<li><a href="/s/slovakia/index.html">Slovakia</a></li>
-						<li><a href="/s/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a></li>
-						<li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">soap, inside gas chamber</a></li>
-						<li><a href="/s/sobibor/index.html">Sobib&oacute;r</a></li>
-						<li><a href="/s/sompolinski-roman/index.html">Sompolinski, Roman</a></li>
-						<li><a href="/s/special-treatment/index.html"><i>Sonderaktion</i></a></li>
-						<li><a href="/s/special-treatment/index.html"><i>Sonderbehandlung</i></a></li>
-						<li><a href="/s/sonderkommando/index.html"><i>Sonderkommando</i></a></li>
-						<li><a href="/s/source-criticism/index.html">Source Criticism</a></li>
-						<li><a href="/s/soviet-union/index.html">Soviet Union</a></li>
-						<li><a href="/s/spanner-rudolf/index.html">Spanner, Rudolf</a></li>
-						<li><a href="/s/special-treatment/index.html">Special Treatment</a></li>
-						<li><a href="/s/speer-albert/index.html">Speer, Albert</a></li>
-						<li><a href="/s/springer-elisa/index.html">Springer, Elisa</a></li>
-						<li><a href="/s/srebrnik-szymon/index.html">Srebrnik, Szymon</a></li>
-						<li><a href="/s/stahlecker-reports/index.html">Stahlecker Reports</a></li>
-						<li><a href="/s/stahlecker-walter/index.html">Stahlecker, Walter</a></li>
-						<li><a href="/s/standing-upright-dead-gassing-victims/index.html">Standing Upright, Dead Gassing Victims</a></li>
-						<li><a href="/s/stanek-franciszek/index.html">Stanek, Franciszek</a></li>
-						<li><a href="/s/stangl-franz/index.html">Stangl, Franz</a></li>
-						<li><a href="/s/stark-hans/index.html">Stark, Hans</a></li>
-						<li><a href="/s/steiner-jean-francois/index.html">Steiner, Jean-Fran&ccedil;ois</a></li>
-						<li><a href="/s/stern-ursula/index.html">Stern, Ursula</a></li>
-						<li><a href="/s/steyuk-yakov/index.html">Steyuk, Yakov</a></li>
-						<li><a href="/s/strawczynski-oskar/index.html">Strawczy&#324;ski, Oskar</a></li>
-						<li><a href="/s/streicher-julius/index.html">Streicher, Julius</a></li>
-						<li><a href="/s/strummer-deli/index.html">Strummer, Deli</a></li>
-						<li><a href="/s/stutthof/index.html">Stutthof</a></li>
-						<li><a href="/n/natzweiler/index.html">Struthof</a></li>
-						<li><a href="/s/suchomel-franz/index.html">Suchomel, Franz</a></li>
-						<li><a href="/s/sulkowski-jan/index.html">Su&#322;kowski, Jan</a></li>
-						<li><a href="/s/survivors/index.html">Survivors</a></li>
-						<li><a href="/s/suss-franz/index.html">S&uuml;ss, Franz</a></li>
-						<li><a href="/s/swimming-pool/index.html">Swimming Pool</a></li>
-						<li><a href="/s/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
-						<li><a href="/s/szende-stefan/index.html">Szende, Stefan</a></li>
-						<li><a href="/s/szlamek-report/index.html">Szlamek Report</a></li>
-						<li><a href="/s/szmajzner-stanislaw/index.html">Szmajzner, Stanis&#322;aw</a></li>
-						<li><a href="/s/szperling-henike/index.html">Szperling, Henike</a></li>
-					</ul>
-			</div>
+<!-- #bbinclude "s.incl" -->
+<ul class="columns"><li><a href="/s/sachsenhausen/index.html">Sachsenhausen</a></li><li><a href="/s/sackar-josef/index.html">Sackar, Josef</a></li><li><a href="/s/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li><li><a href="/s/semlin/index.html">Sajmi&scaron;te</a></li><li><a href="/s/saunas/index.html">Saunas</a></li><li><a href="/s/saurer-company/index.html">Saurer Company</a></li><li><a href="/s/schellekes-maurice/index.html">Schellekes, Maurice</a></li><li><a href="/s/schelvis-jules/index.html">Schelvis, Jules</a></li><li><a href="/s/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li><li><a href="/s/schwarz-deszo/index.html">Schwarz, Desz&ouml;</a></li><li><a href="/s/schwarzbart-ignacy/index.html">Schwarzbart, Ignacy</a></li><li><a href="/s/schwela-siegfried/index.html">Schwela, Siegfried</a></li><li><a href="/s/sehn-jan/index.html">Sehn, Jan</a></li><li><a href="/s/seidenwurm-wrzos-mary/index.html">Seidenwurm Wrzos, Mary</a></li><li><a href="/s/selections/index.html">Selections</a></li><li><a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a></li><li><a href="/s/semlin/index.html">Semlin</a></li><li><a href="/y/yugoslavia/index.html">Serbia</a></li><li><a href="/s/shanghai/index.html">Shanghai</a></li><li><a href="/s/sheftel-yoram/index.html">Sheftel, Yoram</a></li><li><a href="/s/shoes-of-deportees/index.html">Shoes of Deportees</a></li><li><a href="/m/microwave-delousing/index.html">shortwave delousing</a></li><li><a href="/s/show-trials/index.html">Show Trials</a></li><li><a href="/s/showers/index.html">Showers</a></li><li><a href="/s/shrunken-heads-myth-of/index.html">Shrunken Heads, Myth of</a></li><li><a href="/s/silberschein-abraham/index.html">Silberschein, Abraham</a></li><li><a href="/s/simpson-gordon/index.html">Simpson, Gordon</a></li><li><a href="/s/six-million/index.html">Six Million (Jewish Victims)</a></li><li><a href="/s/skarzynski-kazimierz/index.html">Skar&#380;y&#324;ski, Kazimierz</a></li><li><a href="/l/lampshades-of-human-skin/index.html">skin, human, used for objects</a></li><li><a href="/s/slovakia/index.html">Slovakia</a></li><li><a href="/s/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a></li><li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">soap, inside gas chamber</a></li><li><a href="/s/sobibor/index.html">Sobib&oacute;r</a></li><li><a href="/s/sompolinski-roman/index.html">Sompolinski, Roman</a></li><li><a href="/s/special-treatment/index.html"><i>Sonderaktion</i></a></li><li><a href="/s/special-treatment/index.html"><i>Sonderbehandlung</i></a></li><li><a href="/s/sonderkommando/index.html"><i>Sonderkommando</i></a></li><li><a href="/s/source-criticism/index.html">Source Criticism</a></li><li><a href="/s/soviet-union/index.html">Soviet Union</a></li><li><a href="/s/spanner-rudolf/index.html">Spanner, Rudolf</a></li><li><a href="/s/special-treatment/index.html">Special Treatment</a></li><li><a href="/s/speer-albert/index.html">Speer, Albert</a></li><li><a href="/s/springer-elisa/index.html">Springer, Elisa</a></li><li><a href="/s/srebrnik-szymon/index.html">Srebrnik, Szymon</a></li><li><a href="/s/stahlecker-reports/index.html">Stahlecker Reports</a></li><li><a href="/s/stahlecker-walter/index.html">Stahlecker, Walter</a></li><li><a href="/s/standing-upright-dead-gassing-victims/index.html">Standing Upright, Dead Gassing Victims</a></li><li><a href="/s/stanek-franciszek/index.html">Stanek, Franciszek</a></li><li><a href="/s/stangl-franz/index.html">Stangl, Franz</a></li><li><a href="/s/stark-hans/index.html">Stark, Hans</a></li><li><a href="/s/steiner-jean-francois/index.html">Steiner, Jean-Fran&ccedil;ois</a></li><li><a href="/s/stern-ursula/index.html">Stern, Ursula</a></li><li><a href="/s/steyuk-yakov/index.html">Steyuk, Yakov</a></li><li><a href="/s/strawczynski-oskar/index.html">Strawczy&#324;ski, Oskar</a></li><li><a href="/s/streicher-julius/index.html">Streicher, Julius</a></li><li><a href="/s/strummer-deli/index.html">Strummer, Deli</a></li><li><a href="/s/stutthof/index.html">Stutthof</a></li><li><a href="/n/natzweiler/index.html">Struthof</a></li><li><a href="/s/suchomel-franz/index.html">Suchomel, Franz</a></li><li><a href="/s/sulkowski-jan/index.html">Su&#322;kowski, Jan</a></li><li><a href="/s/survivors/index.html">Survivors</a></li><li><a href="/s/suss-franz/index.html">S&uuml;ss, Franz</a></li><li><a href="/s/swimming-pool/index.html">Swimming Pool</a></li><li><a href="/s/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li><li><a href="/s/szende-stefan/index.html">Szende, Stefan</a></li><li><a href="/s/szlamek-report/index.html">Szlamek Report</a></li><li><a href="/s/szmajzner-stanislaw/index.html">Szmajzner, Stanis&#322;aw</a></li><li><a href="/s/szperling-henike/index.html">Szperling, Henike</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
