--- a/t/index.html
+++ b/t/index.html
@@ -17,32 +17,9 @@
 			<h2>
 				T
 			</h2>
-			<div id="toc">
-				<ul class="columns">
-					<li><a href="/t/tabeau-jerzy/index.html">Tabeau, Jerzy</a></li>
-					<li><a href="/t/tauber-henryk/index.html">Tauber, Henryk</a></li>
-					<li><a href="/t/tesch-stabenow/index.html">Tesch &amp; Stabenow</a></li>
-					<li><a href="/t/tesch-bruno/index.html">Tesch, Bruno</a></li>
-					<li><a href="/t/theresienstadt/index.html">Theresienstadt</a></li>
-					<li><a href="/t/thilo-heinz/index.html">Thilo, Heinz</a></li>
-					<li><a href="/t/tools-of-mass-murder/index.html">Tools, of Mass Murder</a></li>
-					<li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Toothbrushes, inside Gas Chambers</a></li>
-					<li><a href="/t/topf-sohne-j-a/index.html">Topf &amp; S&ouml;hne, J.A.</a></li>
-					<li><a href="/t/torture/index.html">Torture</a></li>
-					<li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap, Toothbrushes inside Gas Chambers</a></li>
-					<li><a href="/i/international-tracing-service-arolsen/index.html">Tracing Service</a></li>
-					<li><a href="/t/trajtag-josef/index.html">Trajtag, Josef</a></li>
-					<li><a href="/t/transit-camps/index.html">Transit Camps</a></li>
-					<li><a href="/t/trawniki/index.html">Trawniki</a></li>
-					<li><a href="/t/treblinka/index.html">Treblinka</a></li>
-					<li><a href="/o/open-air-incinerations/index.html">trenches</a></li>
-					<li><a href="/t/trubakov-ziama/index.html">Trubakov, Ziama</a></li>
-					<li><a href="/i/iron-blue/index.html">Turnbull&rsquo;s blue</a></li>
-					<li><a href="/t/turner-harald/index.html">Turner, Harald</a></li>
-					<li><a href="/t/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
-					<li><a href="/t/typhus/index.html">Typhus</a></li>
-				</ul>
-			</div>
+<!-- #bbinclude "t.incl" -->
+<ul class="columns"><li><a href="/t/tabeau-jerzy/index.html">Tabeau, Jerzy</a></li><li><a href="/t/tauber-henryk/index.html">Tauber, Henryk</a></li><li><a href="/t/tesch-stabenow/index.html">Tesch &amp; Stabenow</a></li><li><a href="/t/tesch-bruno/index.html">Tesch, Bruno</a></li><li><a href="/t/theresienstadt/index.html">Theresienstadt</a></li><li><a href="/t/thilo-heinz/index.html">Thilo, Heinz</a></li><li><a href="/t/tools-of-mass-murder/index.html">Tools, of Mass Murder</a></li><li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Toothbrushes, inside Gas Chambers</a></li><li><a href="/t/topf-sohne-j-a/index.html">Topf &amp; S&ouml;hne, J.A.</a></li><li><a href="/t/torture/index.html">Torture</a></li><li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap, Toothbrushes inside Gas Chambers</a></li><li><a href="/i/international-tracing-service-arolsen/index.html">Tracing Service</a></li><li><a href="/t/trajtag-josef/index.html">Trajtag, Josef</a></li><li><a href="/t/transit-camps/index.html">Transit Camps</a></li><li><a href="/t/trawniki/index.html">Trawniki</a></li><li><a href="/t/treblinka/index.html">Treblinka</a></li><li><a href="/o/open-air-incinerations/index.html">trenches</a></li><li><a href="/t/trubakov-ziama/index.html">Trubakov, Ziama</a></li><li><a href="/i/iron-blue/index.html">Turnbull&rsquo;s blue</a></li><li><a href="/t/turner-harald/index.html">Turner, Harald</a></li><li><a href="/t/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li><li><a href="/t/typhus/index.html">Typhus</a></li></ul>
+<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div></div></main><footer class="footer" id="footer"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
